--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
   <!-- Header de la página -->
   <header id="header">
-    <img src="image/mundonatural.png">
+    
+    <img id="pulse" src="image/mundonatural.png">
+    
     <h1><em>Mi Blog de Naturaleza</em></h1>
     <p>
       <!-- <a href="">Botón</a> -->
