--- a/pages/float.html
+++ b/pages/float.html
@@ -57,46 +57,110 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim cupiditate assumenda amet voluptatibus rem dolorem reprehenderit aspernatur velit ab unde atque est, libero dolorum officiis dolor delectus? </p>
       </article> -->
 
-<main>
+  <main>
 
-  <div id="hueco"></div>
+    <div id="hueco"></div>
 
-  <div class="noticia">
-  <h1>Sobre mí</h1>
-   <img class="noticia__img--none" src="../image/young-woman-lush-tropical-foliage-nature-serenity-concept_1222600-1889.jpg" alt="imagen-chica" />
+    <div class="noticia">
+      <h1>Sobre mí</h1>
+      <img class="noticia__img--none"
+        src="../image/young-woman-lush-tropical-foliage-nature-serenity-concept_1222600-1889.jpg" alt="imagen-chica" />
 
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nihil debitis quis aspernatur eaque accusantium reiciendis, aut aperiam, sit inventore quod enim sint. Quidem dignissimos odio ea fugiat soluta quia temporibus, reprehenderit vero, atque debitis deleniti aperiam commodi. Nobis vero adipisci, animi ad rem dolore eum temporibus neque cupiditate incidunt vel blanditiis deserunt optio soluta praesentium esse sit atque, quasi repellat explicabo perferendis quibusdam non voluptates iusto. Esse, sint eveniet ratione asperiores repellat veritatis perspiciatis dolor magni ut, consequatur reprehenderit alias debitis nemo, nisi iusto. Nemo consequuntur consectetur repudiandae accusamus.</p>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nihil debitis quis aspernatur eaque accusantium reiciendis, aut aperiam, sit inventore quod enim sint. Quidem dignissimos odio ea fugiat soluta quia temporibus, reprehenderit vero, atque debitis deleniti aperiam commodi. Nobis vero adipisci, animi ad rem dolore eum temporibus neque cupiditate incidunt vel blanditiis deserunt optio soluta praesentium esse sit atque, quasi repellat explicabo perferendis quibusdam non voluptates iusto. Esse, sint eveniet ratione asperiores repellat veritatis perspiciatis dolor magni ut, consequatur reprehenderit alias debitis nemo, nisi iusto. Nemo consequuntur consectetur repudiandae accusamus.</p>
-</div>
+      <p>Soy una <strong>amante de la naturaleza</strong>. Para mí, la <strong>tierra</strong> y el territorio son muy
+        muy importantes, y las <strong>personas</strong> de culo inquieto. Tanto, que al final he decidido trabajar y
+        vivir de forma nómada. La vida moderna nos ha separado tanto de <strong>Gaia</strong>, que mi propósito
+        profesional y personal es volver a conectarnos con la naturaleza.</p>
+      <p>Lo hago a través de <strong>viajes</strong>; viajes que buscan esta conexión con la naturaleza, <strong>Hacia
+          lo Salvaje</strong>, ponen la vida en el centro. Como viajar es limitado, escribo en mi <strong>blog</strong>,
+        que también tiene ese objetivo de dialogar y conocer iniciativas que viven en armonía con la naturaleza y nos
+        dan <strong>pistas de cómo escapar de estos ritmos locos</strong> que nos acompañan.</p>
+    </div>
+    <div>
+      <h1>Momentos de relax</h1>
+      <div>
+        <iframe data-testid="embed-iframe" style="border-radius:12px"
+          src="https://open.spotify.com/embed/track/4q6kOc6z2RJ5FXS7w54hR2?utm_source=generator" width="50%"
+          height="352" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-<div>
-  <h1>Momentos de relax</h1>
 
-  <iframe data-testid="embed-iframe" style="border-radius:12px"
-    src="https://open.spotify.com/embed/track/4q6kOc6z2RJ5FXS7w54hR2?utm_source=generator" width="50%" height="352"
-    frameBorder="0" allowfullscreen=""
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-  <br><br>
-  <!-- <iframe width="50%" height="370" src="https://www.youtube.com/embed/rqKSFu6ehd0?list=RDrqKSFu6ehd0"
-    title="Work Music for Focus &amp; Productivity | Calm Instrumental Background to Stay in Flow" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+        <iframe data-testid="embed-iframe" style="border-radius:12px"
+          src="https://www.youtube.com/embed/vTeTapELZaQ?si=RlVD6f76EIgh7p6s&amp;start=9" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <!-- <div class="video-container"></div>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/vTeTapELZaQ?si=RlVD6f76EIgh7p6s&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div> -->
+        <iframe data-testid="embed-iframe" style="border-radius:12px"
+          src="https://www.youtube.com/embed/rqKSFu6ehd0?si=cgM8JKPO7M4HG03a&amp;start=4" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div>
+      <h1>Mis lecturas</h1>
 
-  
+      <!-- <img width=200 src="../image/Portada_Confesiones-de-un-ecologista-en-rehabilitación_web_DEF-416x639.png" alt="">
+        <p>
+        <a href="https://www.paulkingsnorth.net/" target="_blank"> Paul Kingsnorth</a>
+        </p> -->
 
-</div>
- <div>
+      <div class="galeria">
+        <figure>
+          <img src="../image/Primer-libro.png" alt="imagen 01" />
+          <input type="radio" name="galeria__input" checked="checked" />
+          <figcaption><span>Primer libro</span></figcaption>
+
+          <figure>
+            <img src="../image/Segundo-libro.png" alt="imagen 02" />
+            <input type="radio" name="galeria__input" />
+            <figcaption><span>Segundo libro</span></figcaption>
+
+            <figure>
+              <img src="../image/Tercer-libro.png" alt="imagen 03" />
+              <input type="radio" name="galeria__input" />
+              <figcaption><span>Tercer libro</span></figcaption>
+              <figure>
+                <img src="../image/Cuarto-libro.png" alt="imagen 04" />
+                <input type="radio" name="galeria__input" />
+                <figcaption><span>Cuarto libro</span></figcaption>
+
+                <figure>
+                  <img src="../image/Quinto-libro.png" alt="imagen 05" />
+                  <input type="radio" name="galeria__input" />
+                  <figcaption><span>Quinto libro</span></figcaption>
+                  <figure>
+                    <img src="../image/Sexto-libro.png" alt="imagen 06" />
+                    <input type="radio" name="galeria__input" />
+                    <figcaption><span>Sexto libro</span></figcaption>
+                  </figure>
+                </figure>
+              </figure>
+            </figure>
+          </figure>
+        </figure>
+
+      </div>
+
+    </div>
+    <div>
       <article class="noticia">
-        <h2>Jugando antes de la cena</h2>
+        <h2>Curiosidades</h2>
+        <h3>Jugando antes de la cena</h3>
         <img class="noticia__img--left"
           src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
           alt="">
-        <figcaption><a href="https://www.bearwitnessphoto.com/" target="_blank"><em>Johnny Hayward</em></a></figcaption>
+        <figcaption><a href="https://www.bearwitnessphoto.com/" target="_blank"><em>Johnny Hayward</em></a>
+        </figcaption>
         <p>En las costas heladas de Manitoba (Canadá), <strong>un oso polar parece olvidarse por un momento de la
             caza</strong> y se
-          tumba panza arriba sobre el hielo. Rodar de un lado a otro, frotarse contra la nieve o simplemente tumbarse en
+          tumba panza arriba sobre el hielo. Rodar de un lado a otro, frotarse contra la nieve o simplemente tumbarse
+          en
           el suelo gélido es parte de su comportamiento natural: con ello refrescan su cuerpo tras largas caminatas y,
-          de paso, mantienen limpia su densa capa de pelo, fundamental para regular el calor en un entorno tan extremo.
+          de paso, mantienen limpia su densa capa de pelo, fundamental para regular el calor en un entorno tan
+          extremo.
         </p>
         <p>La escena captada por el fotógrafo Johnny Hayward coincide con la llamada “<a
             href="https://www.nationalgeographic.com.es/fotografia/foto-del-dia/jugando-antes-cena_26268"
@@ -105,7 +169,8 @@
           Hudson
           donde se forma el hielo marino. Allí esperan el ansiado momento en que <strong>las aguas se congelen lo
             suficiente
-            para salir a cazar focas</strong>. Hasta entonces, entre el hambre y la incertidumbre, algunos se regalan un
+            para salir a cazar focas</strong>. Hasta entonces, entre el hambre y la incertidumbre, algunos se regalan
+          un
           respiro
           sobre la blanca alfombra helada, recordándonos que incluso los mayores depredadores del Ártico saben tomarse
           un descanso.
@@ -114,7 +179,7 @@
       </article>
     </div>
 
-</main>
+  </main>
 
   <!-- <script src="../js/index.js"></script> -->
 
