a falta de arrow

--- a/pages/float.html
+++ b/pages/float.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <!-- Cabecera -->
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,23 +11,6 @@
 </head>
 
 <body>
-
-  <!-- <h1>🌞 Hola Mundo 🌍</h1> 
-   <input type="text" id="inputNombre" placeholder="Tu nombre aquí">
-    <br>
-    <button onClick="mostrarNombre()">Saluda</button> -->
-
-  <!-- <br>
-     <input type="number" placeholder="Pon tu año de nacimiento" id="inputAnioNac">
-   <p id="resultado"></p>
-   <button onclick="calcularEdad()">Calcula tu Edad</button>  -->
-
-  <!-- <header id="header">
-    <img src="../image/header.png">
-    <h1><em>Blog con Header</em></h1>
-    <p>
-      <a href="">Botón</a>
-    </p></header> -->
 
   <!-- Navegador -->
   <nav>
@@ -48,18 +30,11 @@
     </ul>
   </nav>
 
-  <!-- float -->
-  <!-- <article class="noticia">
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus odio adipisci ipsum non praesentium aliquid veritatis explicabo accusamus, eos hic provident quidem enim totam? At ut veritatis optio odio ratione.</h1>
-        <img class="noticia__img--left" src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp" alt="">
-
-        <p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipisicing elit. Deserunt quo recusandae facere distinctio. <a href="https://www.nationalgeographic.com.es/fotografia/foto-del-dia/jugando-antes-cena_26268" target="_blank">Possimus</a> magnam voluptas autem tenetur cupiditate commodi laudantium neque pariatur quam aliquam incidunt, fugiat doloribus?<br> Soluta eos voluptatem iste dolorem amet quas, eaque cupiditate iusto delectus, dignissimos ipsum! Laboriosam repellat sint architecto aliquid quisquam provident itaque atque ut obcaecati natus? <strong>Dignissimos sint totam fugit</strong> ipsa voluptatibus eius dolor provident excepturi consequuntur deleniti delectus aut, quia nam unde quam hic asperiores!<br> Eius earum culpa iusto maiores tempore, sunt cum harum facere consequatur eligendi quos, minima officia fuga praesentium iure magni esse! Consectetur facere modi voluptatum, quasi dolores perspiciatis!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim cupiditate assumenda amet voluptatibus rem dolorem reprehenderit aspernatur velit ab unde atque est, libero dolorum officiis dolor delectus? </p>
-      </article> -->
-
+  <!-- Cuerpo principal de la página -->
   <main>
 
-    <div id="hueco"></div>
+    <div id="hueco">    
+    </div>
 
     <div class="noticia">
       <h1>Sobre mí</h1>
@@ -75,23 +50,21 @@
         que también tiene ese objetivo de dialogar y conocer iniciativas que viven en armonía con la naturaleza y nos
         dan <strong>pistas de cómo escapar de estos ritmos locos</strong> que nos acompañan.</p>
     </div>
+
     <div>
       <h1>Momentos de relax</h1>
       <div>
-        <iframe data-testid="embed-iframe" style="border-radius:12px"
-          src="https://open.spotify.com/embed/track/4q6kOc6z2RJ5FXS7w54hR2?utm_source=generator" width="50%"
-          height="352" frameBorder="0" allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-
         <iframe data-testid="embed-iframe" style="border-radius:12px"
           src="https://www.youtube.com/embed/vTeTapELZaQ?si=RlVD6f76EIgh7p6s&amp;start=9" title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <!-- <div class="video-container"></div>
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/vTeTapELZaQ?si=RlVD6f76EIgh7p6s&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          </div> -->
+
+        <iframe data-testid="embed-iframe" style="border-radius:12px"
+          src="https://open.spotify.com/embed/track/4q6kOc6z2RJ5FXS7w54hR2?utm_source=generator" width="50%"
+          height="352" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
         <iframe data-testid="embed-iframe" style="border-radius:12px"
           src="https://www.youtube.com/embed/rqKSFu6ehd0?si=cgM8JKPO7M4HG03a&amp;start=4" title="YouTube video player"
           frameborder="0"
@@ -99,14 +72,9 @@
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
+
     <div>
       <h1>Mis lecturas</h1>
-
-      <!-- <img width=200 src="../image/Portada_Confesiones-de-un-ecologista-en-rehabilitación_web_DEF-416x639.png" alt="">
-        <p>
-        <a href="https://www.paulkingsnorth.net/" target="_blank"> Paul Kingsnorth</a>
-        </p> -->
-
       <div class="galeria">
         <figure>
           <img src="../image/Primer-libro.png" alt="imagen 01" />
@@ -141,13 +109,13 @@
             </figure>
           </figure>
         </figure>
-
       </div>
 
     </div>
+    
     <div>
       <article class="noticia">
-        <h2>Curiosidades</h2>
+        <h1>Curiosidades</h1>
         <h3>Jugando antes de la cena</h3>
         <img class="noticia__img--left"
           src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
@@ -175,15 +143,12 @@
           sobre la blanca alfombra helada, recordándonos que incluso los mayores depredadores del Ártico saben tomarse
           un descanso.
         </p>
-
       </article>
     </div>
 
   </main>
 
-  <!-- <script src="../js/index.js"></script> -->
-
-  <!-- Pie de página -->
+   <!-- Pie de página -->
   <footer>
     <p>
       <a href="#hueco">
