--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
       <!-- con paneles desplegables -->
       <div id="paneles-content">
         <h2>Beneficios para la felicidad</h2>
-        <p>(presiona sobre cada beneficio para verlo <img src="/image/down-arrow_icon-icons.com_73047.png" width="15px">)</p>
+        <!-- <p>(presiona sobre cada beneficio para verlo <img src="/image/down-arrow_icon-icons.com_73047.png" width="15px">)</p> -->
 
         <div class="paneles">
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel1" checked>
-            <label for="panel1">Reduce el estrés y la ansiedad </label>
+            <label for="panel1"><img src="/image/down-arrow_icon-icons.com_73047.png" width="15px"> Reduce el estrés y la ansiedad</label>
             <div class="contenido">
               <p>Estar en la naturaleza disminuye los niveles de cortisol, la hormona del estrés, y la rumia mental
                 asociada a
@@ -152,7 +152,7 @@
           </div>
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel2">
-            <label for="panel2">Mejora el estado de ánimo</label>
+            <label for="panel2"><img src="/image/down-arrow_icon-icons.com_73047.png" width="15px"> Mejora el estado de ánimo </label>
             <div class="contenido">
               <p>El contacto con el entorno natural puede aumentar la felicidad, fomentar la calma y mejorar el estado
                 general
@@ -161,7 +161,7 @@
           </div>
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel3">
-            <label for="panel3">Aumenta la creatividad y la función cognitiva</label>
+            <label for="panel3"><img src="/image/down-arrow_icon-icons.com_73047.png" width="15px"> Aumenta la creatividad y la función cognitiva</label>
             <div class="contenido">
               <p>El tiempo al aire libre puede estimular la creatividad, la atención y el desarrollo cognitivo.
               </p>
@@ -169,7 +169,7 @@
           </div>
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel4">
-            <label for="panel4">Beneficia la salud física</label>
+            <label for="panel4"><img src="/image/down-arrow_icon-icons.com_73047.png" width="15px"> Beneficia la salud física</label>
             <div class="contenido">
               <p>Respirar aire puro, fortalecer el sistema inmunológico y hacer actividad física en entornos naturales
                 contribuye a un mayor bienestar general.</p>
@@ -177,7 +177,7 @@
           </div>
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel5">
-            <label for="panel5">Fomenta la conexión</label>
+            <label for="panel5"><img src="/image/down-arrow_icon-icons.com_73047.png" width="15px"> Fomenta la conexión</label>
             <div class="contenido">
               <p>Sentirse parte de un sistema más grande, como el ecosistema, refuerza nuestro bienestar y puede
                 inspirar una
@@ -192,14 +192,14 @@
         <div class="paneles">
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel6">
-            <label for="panel6">Actividades al aire libre </label>
+            <label for="panel6"><img src="/image/down-arrow_icon-icons.com_73047.png" width="15px"> Actividades al aire libre </label>
             <div class="contenido">
               <p>Caminar, correr, hacer yoga o nadar en la naturaleza son formas de conectar.</p>
             </div>
           </div>
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel7">
-            <label for="panel7">Observación</label>
+            <label for="panel7"><img src="/image/down-arrow_icon-icons.com_73047.png" width="15px"> Observación</label>
             <div class="contenido">
               <p>Simplemente sentarse, observar un paisaje, escuchar los sonidos o sentir texturas puede ser muy
                 beneficioso.</p>
@@ -207,7 +207,7 @@
           </div>
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel8">
-            <label for="panel8">En el día a día</label>
+            <label for="panel8"><img src="/image/down-arrow_icon-icons.com_73047.png" width="15px"> En el día a día</label>
             <div class="contenido">
               <p>Puedes traer la naturaleza a tu vida a través de plantas en casa, en un balcón o en un jardín pequeño.
               </p>
