--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="paneles">
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel1" checked>
-            <label for="panel1"><img src="/image/down-arrow_icon-icons.com_73047.png" width="15px"> Reduce el estrés y la ansiedad</label>
+            <label for="panel1"><img src="../image/down-arrow_icon-icons.com_73047.png" width="15px"> Reduce el estrés y la ansiedad</label>
             <div class="contenido">
               <p>Estar en la naturaleza disminuye los niveles de cortisol, la hormona del estrés, y la rumia mental
                 asociada a
