--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
       </p>
 
       <!-- con paneles desplegables -->
+      <h3>Beneficios para la felicidad</h3>
       <div id="paneles-content">
-        <h2>Beneficios para la felicidad</h2>
+        <!-- <h3>Beneficios para la felicidad</h3> -->
         <!-- <p>(presiona sobre cada beneficio para verlo <img src="/image/down-arrow_icon-icons.com_73047.png" width="15px">)</p> -->
-
         <div class="paneles">
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel1" checked>
@@ -187,8 +187,8 @@
         </div>
       </div>
       <!-- con paneles desplegables -->
+      <h3>Cómo conectar con la naturaleza</h3>
       <div id="paneles-content">
-        <h2>Cómo conectar con la naturaleza</h2>
         <div class="paneles">
           <div class="panel">
             <input type="radio" name="panel" class="panel-input" id="panel6">
