--- a/pages/float.html
+++ b/pages/float.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <!-- Cabecera -->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,14 +34,17 @@
   <!-- Cuerpo principal de la página -->
   <main>
 
-    <div id="hueco">    
+    <div id="hueco">
     </div>
 
     <div class="noticia">
       <h1>Sobre mí</h1>
+
       <img class="noticia__img--none"
         src="../image/young-woman-lush-tropical-foliage-nature-serenity-concept_1222600-1889.jpg" alt="imagen-chica" />
 
+    </div>
+    <div>
       <p>Soy una <strong>amante de la naturaleza</strong>. Para mí, la <strong>tierra</strong> y el territorio son muy
         muy importantes, y las <strong>personas</strong> de culo inquieto. Tanto, que al final he decidido trabajar y
         vivir de forma nómada. La vida moderna nos ha separado tanto de <strong>Gaia</strong>, que mi propósito
@@ -60,8 +64,10 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-        <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/4q6kOc6z2RJ5FXS7w54hR2?utm_source=generator" width="50%"
-          height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe data-testid="embed-iframe" style="border-radius:12px"
+          src="https://open.spotify.com/embed/track/4q6kOc6z2RJ5FXS7w54hR2?utm_source=generator" width="50%"
+          height="352" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
         <iframe data-testid="embed-iframe" style="border-radius:12px"
           src="https://www.youtube.com/embed/rqKSFu6ehd0?si=cgM8JKPO7M4HG03a&amp;start=4" title="YouTube video player"
@@ -110,7 +116,7 @@
       </div>
 
     </div>
-    
+
     <div>
       <article class="noticia">
         <h1>Curiosidades</h1>
@@ -146,7 +152,7 @@
 
   </main>
 
-   <!-- Pie de página -->
+  <!-- Pie de página -->
   <footer>
     <p>
       <a href="#hueco">
