fin viernes octubre

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -70,6 +70,10 @@
       <!--<li>y <a href="https://www.youtube.com/" target="_blank"> YouTube</a>.</li>-->
       <li>y <a href="https://www.ecoavant.com/" target="_blank"> Ecoavant</a>.</li>
     </ul>
+    <div style="text-align: center;">
+    <img src="../image/file_periodicos.png" target="_blank" alt="foto de notocias"
+      width="300px" class="imagen-tabla">
+  </div>
     <!-- <div style="text-align: center;"> 
       <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRBpdBFikEdYTjK33m5xn0xhJNfq3XNfRbrlMJc9ZP6CWFOb3lXDd4jJifGwf2nZLxl95DmHWqnr6WzkDUUPJy8gIUpTnhk7LaZoIcDc3VBMw" target="_blank" alt="foto de mapa"
        width="300px">
@@ -88,7 +92,10 @@
       <li><a href="https://www.revistaecosistemas.net/" target="_blank">Ecosistemas,</a></i>
       <li>y <a href="https://www.wwf.es/informate/revista_wwf/" target="_blank"> WWF</a>.</li>
     </ol>
-        
+       <div style="text-align: center;">
+    <img src="../image/file_revistas.png" target="_blank" alt="foto de notocias"
+      width="300px" class="imagen-tabla">
+  </div> 
   </section>
 
   <section>
