sigo con musica 4/11

--- a/pages/practicajsn.html
+++ b/pages/practicajsn.html
@@ -9,7 +9,7 @@
     <h2>Listado de libros</h2>
     <div id="lista-libros"></div>
 
-    <!-- <script src="../js/practicajsn.js"></script> -->
+    <script src="../js/practicajsn.js"></script>
 
     
 </body>
