sigo con spotify

--- a/pages/float.html
+++ b/pages/float.html
@@ -78,6 +78,10 @@
     </div>
 
     <div>
+        <a href="mypracticajsn.html"><h1>Otras músicas</h1></a>
+    </div>
+
+    <div>
       <h1>Mis lecturas</h1>
       <div class="galeria">
         <figure>
