--- a/pages/mypracticajsn.html
+++ b/pages/mypracticajsn.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica de JSON</title>
-    <link rel="stylesheet" href="../styles/styles.css">
+    <!-- <link rel="stylesheet" href="../styles/styles.css"> -->
     <link rel="stylesheet" href="../styles/mypracticajsn.css">
     
 </head>
 <body>
+    <div>
     <h1>Listado de música</h1>
     <div id="lista-libros"></div>
-
+    </div>
  
 <!-- <section id="profile">
 <h2>Logged in as <span id="displayName"></span></h2>
