sigo con spotify

--- a/pages/float.html
+++ b/pages/float.html
@@ -82,6 +82,10 @@
     </div>
 
     <div>
+        <a href="spotify.html"><h1>Otras músicas de Spotify</h1></a>
+    </div>
+
+    <div>
       <h1>Mis lecturas</h1>
       <div class="galeria">
         <figure>
@@ -122,9 +126,10 @@
     </div>
 
     <div>
-      <article class="noticia">
+      
         <h1>Curiosidades</h1>
-        <h3>Jugando antes de la cena</h3>
+        <article class="noticia"></article>
+        <h2>Jugando antes de la cena</h2>
         <img class="noticia__img--left"
           src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
           alt="">
