--- a/pages/float.html
+++ b/pages/float.html
@@ -128,6 +128,7 @@
     <div>
       
         <h1>Curiosidades</h1>
+
         <article class="noticia"></article>
         <h2>Jugando antes de la cena</h2>
         <img class="noticia__img--left"
@@ -157,6 +158,15 @@
           un descanso.
         </p>
       </article>
+
+      <article class="noticia"></article>
+        <h2>Cocina del mundo</h2>
+        <img class="noticia__img--rigth" img src="../image/celebracion-del-dia-mundial-de-la-alimentacion-con-una-bola-o-globo-mundial-rodeado-de-comida.jpg" wigth=500 target="_blank" alt="foto-comida">
+        <p>Por los diversos viajes realizados, una parte esencial, siempre, es la <strong>comida</strong>.</p>
+        <p>Se aprenden multitud de <strong>recetas</strong> y se llega a captar el <strong>sabor de un país</strong>.</p>
+        <p>Todo esto ha hecho que me meta en la cocina y experimente con los <strong>fogones</strong>, y he de decir que es una auténtica <strong>delicia</strong> que os sugiero.</p>
+      </article>
+
     </div>
 
   </main>
