mejora imagenes left y rigth

--- a/pages/float.html
+++ b/pages/float.html
@@ -133,7 +133,7 @@
         <h2>Jugando antes de la cena</h2>
         <img class="noticia__img--left"
           src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
-          alt="">
+          alt="foto-oso">
         <figcaption><a href="https://www.bearwitnessphoto.com/" target="_blank"><em>Johnny Hayward</em></a>
         </figcaption>
         <p>En las costas heladas de Manitoba (Canadá), <strong>un oso polar parece olvidarse por un momento de la
