--- a/pages/float.html
+++ b/pages/float.html
@@ -5,9 +5,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Blog sobre naturaleza, viajes y vida nómada: experiencias, fotografías, música y recomendaciones para reconectar con el medio natural y vivir con más conciencia.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Documento</title>
-  <!--<link rel="stylesheet" href="../styles/styles.css">-->
+  <title>Mi blog de naturaleza - Contacto: hablo sobre mí y mis gustos</title>
   <link rel="stylesheet" href="../styles/float.css">
 </head>
 
@@ -78,11 +78,11 @@
     </div>
 
     <div>
-        <a href="mypracticajsn.html"><h1>Otras músicas</h1></a>
+        <a href="mypracticajsn.html" target="_blank"><h1>Otras músicas</h1></a>
     </div>
 
     <div>
-        <a href="spotify.html"><h1>Otras músicas de Spotify</h1></a>
+        <a href="spotify.html" target="_blank"><h1>Otras músicas de Spotify</h1></a>
     </div>
 
     <div>
