--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section id="lista-nosotros">
       <h2><strong>Amantes de la naturaleza</strong></h2>
-      <article class="noticia">
+      <p class="noticia">
         <h3>La calma y la importancia del respeto por la vida</h3>
         <img class="noticia__img--none"
           src="https://images.unsplash.com/photo-1526779259212-939e64788e3c?q=80&w=1748&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -59,7 +59,7 @@
             Houser</a> en <a
             href="https://unsplash.com/es/fotos/hombre-sentado-en-la-roca-rodeado-de-agua--Q_t4SCN8c4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
         </figcaption>
-      </article>
+      </p>
       <div class="aside">
         <p><strong>Amantes de la naturaleza</strong></p>
         <p>Estas personas suelen ser <strong>reflexivas, flexibles, adaptables y
