--- a/pages/float.html
+++ b/pages/float.html
@@ -5,7 +5,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Blog sobre naturaleza, viajes y vida nómada: experiencias, fotografías, música y recomendaciones para reconectar con el medio natural y vivir con más conciencia.">
+  <meta name="description"
+    content="Blog sobre naturaleza, viajes y vida nómada: experiencias, fotografías, música y recomendaciones para reconectar con el medio natural y vivir con más conciencia.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi blog de naturaleza - Contacto: hablo sobre mí y mis gustos</title>
   <link rel="stylesheet" href="../styles/float.css">
@@ -44,6 +45,7 @@
         src="../image/young-woman-lush-tropical-foliage-nature-serenity-concept_1222600-1889.jpg" alt="imagen-chica" />
 
     </div>
+
     <div>
       <p>Soy una <strong>amante de la naturaleza</strong>. Para mí, la <strong>tierra</strong> y el territorio son muy
         muy importantes, y las <strong>personas</strong> de culo inquieto. Tanto, que al final he decidido trabajar y
@@ -58,31 +60,35 @@
     <div>
       <h1>Momentos de relax</h1>
       <div>
-        <iframe data-testid="embed-iframe" style="border-radius:12px"
+
+        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Jk0lQkojstQ?si=rRfwW5fgqHXn2JmT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+
+         <!-- <iframe data-testid="embed-iframe" style="border-radius:12px"
           src="https://www.youtube.com/embed/vTeTapELZaQ?si=RlVD6f76EIgh7p6s&amp;start=9" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
 
         <iframe data-testid="embed-iframe" style="border-radius:12px"
           src="https://open.spotify.com/embed/track/4q6kOc6z2RJ5FXS7w54hR2?utm_source=generator" width="50%"
-          height="352" frameBorder="0" allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          height="352" frameBorder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-        <iframe data-testid="embed-iframe" style="border-radius:12px"
+        <!-- <iframe data-testid="embed-iframe" style="border-radius:12px"
           src="https://www.youtube.com/embed/rqKSFu6ehd0?si=cgM8JKPO7M4HG03a&amp;start=4" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
       </div>
     </div>
 
     <div>
-        <a href="mypracticajsn.html" target="_blank"><h1>Otras músicas</h1></a>
+      <a href="mypracticajsn.html" target="_blank">
+        <h3>Otras músicas</h3>
+      </a>
     </div>
 
     <div>
-        <a href="spotify.html" target="_blank"><h1>Otras músicas de Spotify</h1></a>
+      <a href="spotify.html" target="_blank">
+        <h3>Otras músicas de Spotify</h3>
+      </a>
     </div>
 
     <div>
@@ -126,10 +132,10 @@
     </div>
 
     <div>
-      
-        <h1>Curiosidades</h1>
 
-        <article class="noticia"></article>
+      <h1>Curiosidades</h1>
+
+      <p class="noticia">
         <h2>Jugando antes de la cena</h2>
         <img class="noticia__img--left"
           src="https://content.nationalgeographic.com.es/medio/2025/09/28/2-osos_b7a54f5f_250928180341_1280x854.webp"
@@ -157,15 +163,18 @@
           sobre la blanca alfombra helada, recordándonos que incluso los mayores depredadores del Ártico saben tomarse
           un descanso.
         </p>
-      </article>
+      </p>
 
-      <article class="noticia"></article>
-        <h2>Cocina del mundo</h2>
-        <img class="noticia__img--rigth" img src="../image/celebracion-del-dia-mundial-de-la-alimentacion-con-una-bola-o-globo-mundial-rodeado-de-comida.jpg" wigth=500 target="_blank" alt="foto-comida">
-        <p>Por los diversos viajes realizados, una parte esencial, siempre, es la <strong>comida</strong>.</p>
-        <p>Se aprenden multitud de <strong>recetas</strong> y se llega a captar el <strong>sabor de un país</strong>.</p>
-        <p>Todo esto ha hecho que me meta en la cocina y experimente con los <strong>fogones</strong>, y he de decir que es una auténtica <strong>delicia</strong> que os sugiero.</p>
-      </article>
+      <p class="noticia">
+      <h2>Cocina del mundo</h2>
+      <img class="noticia__img--rigth" img
+        src="../image/celebracion-del-dia-mundial-de-la-alimentacion-con-una-bola-o-globo-mundial-rodeado-de-comida.jpg"
+        wigth=500 target="_blank" alt="foto-comida">
+      <p>Por los diversos viajes realizados, una parte esencial, siempre, es la <strong>comida</strong>.</p>
+      <p>Se aprenden multitud de <strong>recetas</strong> y se llega a captar el <strong>sabor de un país</strong>.</p>
+      <p>Todo esto ha hecho que me meta en la cocina y experimente con los <strong>fogones</strong>, y he de decir que
+        es una auténtica <strong>delicia</strong> que os sugiero.</p>
+      </p>
 
     </div>
 
